<resources>
    <string name="app_name">GenShinImpactCookBook</string>
    <string name="title_activity_sp_test">SpTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="add_new_tasks">向题库中添加新题</string>
    <string name="renew_tasks_this.page">刷新本页习题</string>
    <string name="task_title">乘除法练习器</string>
    <string name="result_hint">在此输入结果</string>
    <string name="exceed_hint">如有余数，请输入</string>
    <string name="place_take">占位占位</string>
    <string name="require">请计算以下表达式</string>
    <string name="submit">提交检查</string>
</resources>