<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".XXSCalcStimulate"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_tasks"
                    android:layout_margin="10dp"
                    android:id="@+id/bt_add_new_tasks"
                    android:onClick="createNewTasks" />

                <Button
                    android:id="@+id/renew_current_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:onClick="renewCurrentTasks"
                    android:text="@string/renew_tasks_this.page" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:text="@string/require"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/result_hint"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:text="@string/exceed_hint"
                    android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_11"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_12"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_13"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_21"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_22"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_23"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_31"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_32"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_33"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_41"
                    android:gravity="center"
                    />
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_42"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_43"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:id="@+id/tv_51"
                    android:gravity="center"/>
                <EditText
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_52"/>
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:id="@+id/et_53"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/tv_end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:onClick="submit"/>
        </LinearLayout>


</LinearLayout>